--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="theme-color" content="#258752">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Desa Wisata Melung</title>
+  <title>Desa Wisata Melung - Nyatanya Nyegerin</title>
 </head>
 
 <body>
